--- a/zabbix_telegraf.conf
+++ b/zabbix_telegraf.conf
@@ -1,6 +1,7 @@
 # zabbix_sender_start
 [[outputs.execd]]
-  command = ["/usr/local/bin/zabbix_sender"]
+  command = ["/usr/local/sbin/zabbix_sender"]
+  #command = ["/usr/local/sbin/zabbix_sender", "-c=true", "-l=/var/log/zabbix.log"]
   restart_delay = "10s"
   data_format = "graphite"
   template = "measurement.field"
