--- a/zabbix_telegraf.conf
+++ b/zabbix_telegraf.conf
@@ -3,6 +3,7 @@
   command = ["/usr/local/sbin/zabbix_sender"]
   #command = ["/usr/local/sbin/zabbix_sender", "-c=true", "-l=/var/log/zabbix.log"]
   restart_delay = "10s"
+  ignore_serialization_error = true
   data_format = "graphite"
   template = "measurement.field"
 # zabbix_sender_end
